# cys

./: .gitignore  Actuator.cxx  Actuator.hxx  CMakeLists.txt  Controller.cxx  Controller.hxx  Cypress.cxx  Cypress.hxx  Dockerfile  Electromagnetic.hxx  Makefile  Mechanical.hxx  Protocol.hxx  README.md  RSC.yaml  RotorSystem.cxx  Sensor.cxx  Sensor.hxx  xp.go
builder/: Dockerfile  dependencies.make  nvp.patch
common/: CMakeLists.txt  Protocol.cxx
control/: CMakeLists.txt  Controller.cxx  Controller.hxx
control/example/: RSC.yaml  RotorSpeedController.cxx
control/lib/: CMakeLists.txt  MagneticCoreController.cxx  RotorSpeedController.cxx  SP.cxx
example/: CMakeLists.txt
example/MagneticCore/: sys.go
example/MagneticCore/control/: ctl.yaml
example/MagneticCore/sim/: CMakeLists.txt  MCoreSystem.cxx  sim.yaml
example/RotorSystem/: down.sh  rc.go  run.sh  up.sh  xp.cxx  xp.go  xp.rb
example/RotorSystem/control/: rca.yaml  rcb.yaml  rcc.yaml
example/RotorSystem/sim/: CMakeLists.txt  RotorSystem.cxx  sim.yaml
example/Stator/sim/: CMakeLists.txt  Stator.cxx
example/SynchronousMachine/: sys.go
example/SynchronousMachine/control/: ctl.yaml  field_ctl.yaml  rotor_ctl.yaml  torque_ctl.yaml
example/SynchronousMachine/sim/: CMakeLists.txt  TurbineHouse.cxx
lib/example/: CMakeLists.txt  RotorSystem.cxx
marina/: buildbot_exec.sh  buildbot_run.sh  code_sync.sh  docker19_linux_install.sh  docker19_osx_install.sh  docker19_vb_install.sh  env_down.sh  env_up.sh  tunnel_down.sh  tunnel_up.sh
sim/: Actuator.cxx  Actuator.hxx  CMakeLists.txt  Cypress.cxx  Cypress.hxx  Sensor.cxx
sim/lib/: Electromagnetic.hxx  Mechanical.hxx  Stator.hxx  SynchronousMachine.hxx  SynchronousMachineDQ0.hxx
util/: plot_results.py  realtime_signals.py
